# Copyright (c) "Neo4j"
# Neo4j Sweden AB [https://neo4j.com]
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "neo4j-rust-ext"
description = "Rust Extensions for a Faster Neo4j Bolt Driver for Python"
license = {text = "Apache License, Version 2.0"}
readme = "README.md"
authors = [
    # Can be changed back when https://github.com/PyO3/maturin/pull/1832 is merged and released
    # {name = "Neo4j, Inc.", email = "drivers@neo4j.com"},
    {email = "\"Neo4j, Inc.\" <drivers@neo4j.com>"}
]
dependencies = [
    "neo4j == 5.21.0"
]
requires-python = ">=3.7"
keywords = ["neo4j", "graph", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development",
]
version = "5.21.0.0"

[project.urls]
Homepage = "https://neo4j.com/"
Repository = "https://github.com/neo4j-drivers/neo4j-python-driver-rust-ext"
"Issue Tracker" = "https://github.com/neo4j-drivers/neo4j-python-driver-rust-ext/issues"
Forum = "https://community.neo4j.com/c/drivers-stacks/python/"
Discord = "https://discord.com/invite/neo4j"

[project.optional-dependencies]
numpy = ["neo4j[numpy]"]
pandas = ["neo4j[pandas]"]
pyarrow = ["neo4j[pyarrow]"]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/generate-import-lib"]
module-name = "neo4j._codec.packstream._rust"
exclude = [
    "/.editorconfig",
    ".gitignore",
    ".gitmodules",
    ".pre-commit-config.yaml",
    "bin/**/*",
    "driver/**/*",
    "test*/**/*",
    "CONTRIBUTING.md",
    "requirements*.txt",
    "tox.ini",
    { path = "neo4j/**/.keep", format = "wheel" }
]
